--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "@testing-library/react": "16.2.0",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
+        "@types/node-persist": "3.1.8",
         "@types/react": "19.0.10",
         "@types/react-dom": "19.0.4",
         "@types/unorm": "1.3.31",
@@ -147,6 +148,7 @@
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
         "node-fetch": "3.3.2",
+        "node-persist": "4.0.4",
         "ora": "8.2.0",
         "playwright": "1.51.0",
         "postcss-modules": "6.0.1",
