--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
         "@apollo/client": "3.13.4",
         "@commitlint/cli": "19.8.0",
         "@commitlint/config-conventional": "19.8.0",
-        "@eslint-react/eslint-plugin": "1.32.1",
+        "@eslint-react/eslint-plugin": "1.34.1",
         "@eslint/config-inspector": "1.0.2",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.7.0",
@@ -175,6 +175,7 @@
         "chalk": "5.4.1",
         "classnames": "2.5.1",
         "crypto-js": "4.2.0",
+        "date-fns": "4.1.0",
         "eslint": "9.22.0",
         "eslint-config-next": "15.2.2",
         "eslint-plugin-format": "1.0.1",
@@ -182,7 +183,7 @@
         "eslint-plugin-react-refresh": "0.4.19",
         "graphql": "16.10.0",
         "graphql-ws": "6.0.4",
-        "i18next": "24.2.2",
+        "i18next": "24.2.3",
         "jsdom": "26.0.0",
         "lint-staged": "15.5.0",
         "localforage": "1.10.0",
