--- a/package.json
+++ b/package.json
@@ -99,6 +99,11 @@
             "import": "./dist/controllers/index.js",
             "require": "./dist/controllers/index.cjs"
         },
+        "./hocs/react": {
+            "types": "./dist/hocs/react/index.d.ts",
+            "import": "./dist/hocs/react/index.js",
+            "require": "./dist/hocs/react/index.cjs"
+        },
         "./hooks/react": {
             "types": "./dist/hooks/react/index.d.ts",
             "import": "./dist/hooks/react/index.js",
@@ -153,18 +158,18 @@
         "@apollo/client": "3.13.4",
         "@commitlint/cli": "19.8.0",
         "@commitlint/config-conventional": "19.8.0",
-        "@eslint-react/eslint-plugin": "1.34.1",
+        "@eslint-react/eslint-plugin": "1.35.0",
         "@eslint/config-inspector": "1.0.2",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.7.0",
         "@graphql-codegen/typescript-react-apollo": "4.3.2",
-        "@swc/core": "1.11.10",
+        "@swc/core": "1.11.11",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.2.0",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/node-persist": "3.1.8",
-        "@types/react": "19.0.10",
+        "@types/react": "19.0.11",
         "@types/react-dom": "19.0.4",
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
@@ -177,7 +182,7 @@
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
         "eslint": "9.22.0",
-        "eslint-config-next": "15.2.2",
+        "eslint-config-next": "15.2.3",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.19",
@@ -190,16 +195,17 @@
         "mongoose": "8.12.1",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
+        "next-intl": "4.0.2",
         "node-fetch": "3.3.2",
         "node-persist": "4.0.4",
         "ora": "8.2.0",
-        "playwright": "1.51.0",
+        "playwright": "1.51.1",
         "postcss-modules": "6.0.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-i18next": "15.4.1",
         "rimraf": "6.0.1",
-        "sass": "1.85.1",
+        "sass": "1.86.0",
         "simple-git-hooks": "2.11.1",
         "slugify": "1.6.6",
         "tsup": "8.4.0",
