--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "dependencies": {
         "@antfu/eslint-config": "4.10.1",
         "@apollo/client": "3.13.4",
+        "@apollo/experimental-nextjs-app-support": "0.11.11",
         "@commitlint/cli": "19.8.0",
         "@commitlint/config-conventional": "19.8.0",
         "@eslint-react/eslint-plugin": "1.35.0",
