feat: give readme a new style

--- a/package.json
+++ b/package.json
@@ -152,19 +152,19 @@
     "scripts": {
         "build": "tsup",
         "dev": "tsup --watch",
-        "inspect": "npx tsx src/commands.ts inspect",
         "lint": "npx tsx src/commands.ts lint",
         "lint:fix": "npx tsx src/commands.ts lint:fix",
         "lint:inspect": "npx @eslint/config-inspector",
         "reset": "npx tsx src/commands.ts reset",
-        "setup": "npx tsx src/commands.ts setup"
+        "setup": "npx tsx src/commands.ts setup",
+        "inspect": "npx tsx src/commands.ts inspect"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.10.2",
         "@apollo/client": "3.13.5",
         "@commitlint/cli": "19.8.0",
         "@commitlint/config-conventional": "19.8.0",
-        "@eslint-react/eslint-plugin": "1.37.0",
+        "@eslint-react/eslint-plugin": "1.37.3",
         "@eslint/config-inspector": "1.0.2",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.7.0",
@@ -188,7 +188,7 @@
         "classnames": "2.5.1",
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
-        "eslint": "9.22.0",
+        "eslint": "9.23.0",
         "eslint-config-next": "15.2.3",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
@@ -199,7 +199,7 @@
         "jsdom": "26.0.0",
         "lint-staged": "15.5.0",
         "localforage": "1.10.0",
-        "mongoose": "8.12.1",
+        "mongoose": "8.12.2",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
         "next-intl": "4.0.2",
