feat: change npm to pnpm

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,38 +14,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js with pnpm
         uses: actions/setup-node@v4
         with:
           node-version: '22.14.0'
           registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - name: Cache npm dependencies and node_modules
-        id: cache-npm
+      - name: Enable Corepack and install pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest --activate
+
+      - name: Cache pnpm store
         uses: actions/cache@v4
         with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          path: ~/.local/share/pnpm/store
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-npm-
-
-      - name: Cache release dependencies
-        id: cache-release-deps
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: release-deps-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            release-deps-${{ runner.os }}-
+            ${{ runner.os }}-pnpm-store-
 
       - name: Configure npm authentication
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
 
-      - name: Install semantic-release manually
-        if: steps.cache-release-deps.outputs.cache-hit != 'true'
+      - name: Install semantic-release manually with pnpm
         run: |
-          npm install --no-save semantic-release@24.2.3 \
+          pnpm add --global semantic-release@24.2.3 \
             @semantic-release/changelog@6.0.2 \
             @semantic-release/git@10.0.1 \
             @semantic-release/github@11.0.1 \
@@ -58,4 +52,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+        run: semantic-release
