--- a/package.json
+++ b/package.json
@@ -152,22 +152,22 @@
     "scripts": {
         "build": "tsup",
         "dev": "tsup --watch",
-        "lint": "npx tsx src/cli.ts lint",
-        "lint:fix": "npx tsx src/cli.ts lint:fix",
-        "lint:inspect": "npx @eslint/config-inspector",
-        "reset": "npx tsx src/cli.ts reset",
-        "setup": "npx tsx src/cli.ts setup",
-        "inspect": "npx tsx src/cli.ts inspect"
+        "lint": "pnpm exec tsx src/cli.ts lint",
+        "lint:fix": "pnpm exec tsx src/cli.ts lint:fix",
+        "lint:inspect": "pnpm exec @eslint/config-inspector",
+        "reset": "pnpm exec tsx src/cli.ts reset",
+        "setup": "pnpm exec tsx src/cli.ts setup",
+        "inspect": "pnpm exec tsx src/cli.ts inspect"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.11.0",
         "@apollo/client": "3.13.5",
         "@commitlint/cli": "19.8.0",
         "@commitlint/config-conventional": "19.8.0",
-        "@eslint-react/eslint-plugin": "1.38.0",
+        "@eslint-react/eslint-plugin": "1.38.2",
         "@eslint/config-inspector": "1.0.2",
         "@graphql-codegen/cli": "5.0.5",
-        "@graphql-codegen/client-preset": "4.7.0",
+        "@graphql-codegen/client-preset": "4.8.0",
         "@graphql-codegen/typescript-react-apollo": "4.3.2",
         "@microsoft/api-extractor": "7.52.2",
         "@next/eslint-plugin-next": "15.2.4",
@@ -194,6 +194,7 @@
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.19",
+        "globals": "16.0.0",
         "graphql": "16.10.0",
         "graphql-ws": "6.0.4",
         "i18next": "24.2.3",
@@ -201,6 +202,7 @@
         "lint-staged": "15.5.0",
         "localforage": "1.10.0",
         "modern-normalize": "3.0.1",
+        "mongodb": "6.15.0",
         "mongoose": "8.13.0",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
@@ -223,6 +225,7 @@
         "typescript": "5.8.2",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
+        "vite": "6.2.3",
         "vitest": "3.0.9",
         "vitest-browser-react": "0.1.1",
         "yargs": "17.7.2"
