--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,9 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'pnpm'
 
-      - name: Enable Corepack and install pnpm
+      - name: Install pnpm
         run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
+          npm install --global pnpm
 
       - name: Cache pnpm store
         uses: actions/cache@v4
@@ -37,9 +36,9 @@ jobs:
       - name: Configure npm authentication
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
 
-      - name: Install semantic-release manually with pnpm
+      - name: Install semantic-release
         run: |
-          pnpm add --global semantic-release@24.2.3 \
+          pnpm install --global semantic-release@24.2.3 \
             @semantic-release/changelog@6.0.2 \
             @semantic-release/git@10.0.1 \
             @semantic-release/github@11.0.1 \
