--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "dependencies": {
         "@antfu/eslint-config": "4.11.0",
         "@apollo/client": "3.13.5",
-        "@eslint-react/eslint-plugin": "1.40.1",
+        "@eslint-react/eslint-plugin": "1.40.2",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
         "@graphql-codegen/typescript-react-apollo": "4.3.2",
@@ -170,7 +170,7 @@
         "@next/eslint-plugin-next": "15.2.4",
         "@swc/core": "1.11.16",
         "@testing-library/jest-dom": "6.6.3",
-        "@testing-library/react": "16.2.0",
+        "@testing-library/react": "16.3.0",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/node-persist": "3.1.8",
@@ -211,7 +211,7 @@
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-i18next": "15.4.1",
-        "sass": "1.86.1",
+        "sass": "1.86.2",
         "slugify": "1.6.6",
         "tsup": "8.4.0",
         "tsx": "4.19.3",
@@ -232,6 +232,7 @@
         "@eslint/config-inspector": "1.0.2",
         "lint-staged": "15.5.0",
         "node-modules-inspector": "0.6.0",
-        "simple-git-hooks": "2.12.1"
+        "simple-git-hooks": "2.12.1",
+        "tsc": "2.0.4"
     }
 }
