--- a/package.json
+++ b/package.json
@@ -152,12 +152,12 @@
     "scripts": {
         "build": "tsup",
         "dev": "tsup --watch",
-        "lint": "pnpm exec tsx src/cli.ts lint",
-        "lint:fix": "pnpm exec tsx src/cli.ts lint:fix",
-        "lint:inspect": "pnpm exec tsx src/cli.ts lint:inspect",
-        "reset": "pnpm exec tsx src/cli.ts reset",
-        "setup": "pnpm exec tsx src/cli.ts setup",
-        "inspect": "pnpm exec tsx src/cli.ts inspect"
+        "lint": "tsx src/cli.ts lint",
+        "lint:fix": "tsx src/cli.ts lint:fix",
+        "lint:inspect": "tsx src/cli.ts lint:inspect",
+        "reset": "tsx src/cli.ts reset",
+        "setup": "tsx src/cli.ts setup",
+        "inspect": "tsx src/cli.ts inspect"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.11.0",
@@ -171,14 +171,6 @@
         "@swc/core": "1.11.16",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
-        "@types/crypto-js": "4.2.2",
-        "@types/mongoose-aggregate-paginate-v2": "1.0.12",
-        "@types/node-persist": "3.1.8",
-        "@types/react": "19.1.0",
-        "@types/react-dom": "19.1.1",
-        "@types/unorm": "1.3.31",
-        "@types/uuid": "10.0.0",
-        "@types/yargs": "17.0.33",
         "@vitejs/plugin-react-swc": "3.8.1",
         "@vitest/browser": "3.1.1",
         "boxen": "8.0.1",
@@ -206,7 +198,6 @@
         "node-fetch": "3.3.2",
         "node-persist": "4.0.4",
         "ora": "8.2.0",
-        "playwright": "1.51.1",
         "postcss-modules": "6.0.1",
         "react": "19.1.0",
         "react-dom": "19.1.0",
@@ -215,7 +206,6 @@
         "slugify": "1.6.6",
         "tsup": "8.4.0",
         "tsx": "4.19.3",
-        "typescript": "5.8.2",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vite": "6.2.5",
@@ -230,9 +220,17 @@
     "devDependencies": {
         "@commitlint/cli": "19.8.0",
         "@eslint/config-inspector": "1.0.2",
+        "@types/crypto-js": "4.2.2",
+        "@types/mongoose-aggregate-paginate-v2": "1.0.12",
+        "@types/node-persist": "3.1.8",
+        "@types/react": "19.1.0",
+        "@types/react-dom": "19.1.1",
+        "@types/unorm": "1.3.31",
+        "@types/uuid": "10.0.0",
+        "@types/yargs": "17.0.33",
         "lint-staged": "15.5.0",
         "node-modules-inspector": "0.6.0",
         "simple-git-hooks": "2.12.1",
-        "tsc": "2.0.4"
+        "typescript": "5.8.2"
     }
 }
