--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
         "slugify": "1.6.6",
         "tsup": "8.4.0",
         "tsx": "4.19.3",
+        "typescript": "5.8.2",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vite": "6.2.5",
@@ -230,7 +231,6 @@
         "@types/yargs": "17.0.33",
         "lint-staged": "15.5.0",
         "node-modules-inspector": "0.6.0",
-        "simple-git-hooks": "2.12.1",
-        "typescript": "5.8.2"
+        "simple-git-hooks": "2.12.1"
     }
 }
