--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
         "node-fetch": "3.3.2",
         "node-persist": "4.0.4",
         "ora": "8.2.0",
+        "playwright": "1.51.1",
         "postcss-modules": "6.0.1",
         "react": "19.1.0",
         "react-dom": "19.1.0",
