--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
             "import": "./dist/index.js",
             "require": "./dist/index.cjs"
         },
+        "./configs": {
+            "types": "./dist/configs/index.d.ts",
+            "import": "./dist/configs/index.js",
+            "require": "./dist/configs/index.cjs"
+        },
         "./configs/commitlint": {
             "types": "./dist/configs/commitlint/base.d.ts",
             "import": "./dist/configs/commitlint/base.js",
@@ -126,13 +131,17 @@
     ],
     "scripts": {
         "build": "tsup",
-        "dev": "tsup --watch",
-        "lint": "tsx src/cli.ts lint",
-        "lint:fix": "tsx src/cli.ts lint:fix",
-        "lint:inspect": "tsx src/cli.ts lint:inspect",
-        "reset": "tsx src/cli.ts reset",
-        "setup": "tsx src/cli.ts setup",
-        "inspect": "tsx src/cli.ts inspect"
+        "dev": "dotenv -e .env -- tsup --watch",
+        "lint": "dotenv -e .env -- tsx src/cli.ts lint",
+        "lint:fix": "dotenv -e .env -- tsx src/cli.ts lint:fix",
+        "lint:inspect": "dotenv -e .env -- tsx src/cli.ts lint:inspect",
+        "reset": "dotenv -e .env -- tsx src/cli.ts reset",
+        "setup": "dotenv -e .env -- tsx src/cli.ts setup",
+        "inspect": "dotenv -e .env -- tsx src/cli.ts inspect",
+        "test:unit": "dotenv -e .env -- tsx src/cli.ts test:unit",
+        "test:e2e": "dotenv -e .env -- tsx src/cli.ts test:e2e",
+        "commitlint": "dotenv -e .env -- tsx src/cli.ts commitlint",
+        "lint-staged": "dotenv -e .env -- tsx src/cli.ts lint-staged"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.11.0",
@@ -153,6 +162,7 @@
         "classnames": "2.5.1",
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
+        "dotenv-cli": "8.0.0",
         "eslint-config-next": "15.2.4",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
