--- a/package.json
+++ b/package.json
@@ -145,12 +145,12 @@
     },
     "dependencies": {
         "@antfu/eslint-config": "4.11.0",
-        "@apollo/client": "3.13.5",
+        "@apollo/client": "3.13.6",
         "@eslint-react/eslint-plugin": "1.40.3",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
         "@graphql-codegen/typescript-react-apollo": "4.3.2",
-        "@microsoft/api-extractor": "7.52.2",
+        "@microsoft/api-extractor": "7.52.3",
         "@next/eslint-plugin-next": "15.2.4",
         "@swc/core": "1.11.16",
         "@testing-library/jest-dom": "6.6.3",
@@ -184,14 +184,17 @@
         "ora": "8.2.0",
         "playwright": "1.51.1",
         "postcss-modules": "6.0.1",
+        "qs": "6.14.0",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "react-hot-toast": "2.5.2",
         "react-i18next": "15.4.1",
+        "react-icons": "5.5.0",
         "sass": "1.86.3",
         "slugify": "1.6.6",
         "tsup": "8.4.0",
         "tsx": "4.19.3",
-        "typescript": "5.8.2",
+        "typescript": "5.8.3",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vite": "6.2.5",
@@ -214,7 +217,7 @@
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
-        "eslint": "9.23.0",
+        "eslint": "9.24.0",
         "lint-staged": "15.5.0",
         "node-modules-inspector": "0.6.2",
         "simple-git-hooks": "2.12.1"
