--- a/package.json
+++ b/package.json
@@ -157,9 +157,9 @@
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.8.1",
         "@vitest/browser": "3.1.1",
-        "boxen": "8.0.1",
         "chalk": "5.4.1",
         "classnames": "2.5.1",
+        "consola": "3.4.2",
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
         "dotenv-cli": "8.0.0",
