--- a/package.json
+++ b/package.json
@@ -34,11 +34,6 @@
             "import": "./dist/configs/eslint/index.js",
             "require": "./dist/configs/eslint/index.cjs"
         },
-        "./configs/graphql": {
-            "types": "./dist/configs/graphql/index.d.ts",
-            "import": "./dist/configs/graphql/index.js",
-            "require": "./dist/configs/graphql/index.cjs"
-        },
         "./configs/lint-staged": {
             "types": "./dist/configs/lint-staged/index.d.ts",
             "import": "./dist/configs/lint-staged/index.js",
@@ -119,6 +114,11 @@
             "import": "./dist/react/apollo-error/index.js",
             "require": "./dist/react/apollo-error/index.cjs"
         },
+        "./react/graphql-codegen": {
+            "types": "./dist/react/graphql-codegen/index.d.ts",
+            "import": "./dist/react/graphql-codegen/index.js",
+            "require": "./dist/react/graphql-codegen/index.cjs"
+        },
         "./react/i18next": {
             "types": "./dist/react/i18next/index.d.ts",
             "import": "./dist/react/i18next/index.js",
@@ -196,12 +196,12 @@
     "dependencies": {
         "@antfu/eslint-config": "4.11.0",
         "@apollo/client": "3.13.6",
-        "@eslint-react/eslint-plugin": "1.41.0",
+        "@eslint-react/eslint-plugin": "1.42.1",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
         "@graphql-codegen/typescript-react-apollo": "4.3.2",
         "@microsoft/api-extractor": "7.52.3",
-        "@next/eslint-plugin-next": "15.2.4",
+        "@next/eslint-plugin-next": "15.2.5",
         "@swc/core": "1.11.18",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
@@ -213,7 +213,7 @@
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
         "dotenv-cli": "8.0.0",
-        "eslint-config-next": "15.2.4",
+        "eslint-config-next": "15.2.5",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.19",
@@ -263,7 +263,7 @@
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/node-persist": "3.1.8",
         "@types/react": "19.1.0",
-        "@types/react-dom": "19.1.1",
+        "@types/react-dom": "19.1.2",
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
