--- a/package.json
+++ b/package.json
@@ -196,13 +196,13 @@
     "dependencies": {
         "@antfu/eslint-config": "4.12.0",
         "@apollo/client": "3.13.7",
-        "@eslint-react/eslint-plugin": "1.43.0",
+        "@eddeee888/gcg-typescript-resolver-files": "0.12.0",
+        "@eslint-react/eslint-plugin": "1.45.0",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
-        "@graphql-codegen/typescript-react-apollo": "4.3.2",
         "@microsoft/api-extractor": "7.52.3",
         "@next/eslint-plugin-next": "15.3.0",
-        "@swc/core": "1.11.18",
+        "@swc/core": "1.11.20",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.8.1",
