feat: move tsconfig.base.json to root

--- a/package.json
+++ b/package.json
@@ -167,7 +167,8 @@
     },
     "files": [
         "dist",
-        "public"
+        "public",
+        "tsconfig.base.json"
     ],
     "scripts": {
         "build": "tsup",
