feat: move tsconfig to public

--- a/package.json
+++ b/package.json
@@ -167,8 +167,7 @@
     },
     "files": [
         "dist",
-        "public",
-        "tsconfig.base.json"
+        "public"
     ],
     "scripts": {
         "build": "tsup",
