--- a/public/tsconfig.base.json
+++ b/public/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES6",
-        "jsx": "react-jsx",
+        "jsx": "react",
         "lib": ["ESNext", "DOM", "DOM.Iterable"],
         "useDefineForClassFields": true,
         "emitDecoratorMetadata": true,
