--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
             "import": "./dist/nodejs/index.js",
             "require": "./dist/nodejs/index.cjs"
         },
+        "./nodejs/apollo-server": {
+            "types": "./dist/nodejs/apollo-server/index.d.ts",
+            "import": "./dist/nodejs/apollo-server/index.js",
+            "require": "./dist/nodejs/apollo-server/index.cjs"
+        },
         "./nodejs/cli": {
             "types": "./dist/nodejs/cli/index.d.ts",
             "import": "./dist/nodejs/cli/index.js",
@@ -63,6 +68,11 @@
             "types": "./dist/nodejs/command/index.d.ts",
             "import": "./dist/nodejs/command/index.js",
             "require": "./dist/nodejs/command/index.cjs"
+        },
+        "./nodejs/express": {
+            "types": "./dist/nodejs/express/index.d.ts",
+            "import": "./dist/nodejs/express/index.js",
+            "require": "./dist/nodejs/express/index.cjs"
         },
         "./nodejs/fs": {
             "types": "./dist/nodejs/fs/index.d.ts",
@@ -93,6 +103,11 @@
             "types": "./dist/nodejs/storage/index.d.ts",
             "import": "./dist/nodejs/storage/index.js",
             "require": "./dist/nodejs/storage/index.cjs"
+        },
+        "./nodejs/ws": {
+            "types": "./dist/nodejs/ws/index.d.ts",
+            "import": "./dist/nodejs/ws/index.js",
+            "require": "./dist/nodejs/ws/index.cjs"
         },
         "./react": {
             "types": "./dist/react/index.d.ts",
@@ -185,13 +200,14 @@
     },
     "dependencies": {
         "@antfu/eslint-config": "4.12.0",
-        "@apollo/client": "3.13.7",
+        "@apollo/client": "3.13.8",
+        "@apollo/server": "4.12.0",
         "@eddeee888/gcg-typescript-resolver-files": "0.12.0",
-        "@eslint-react/eslint-plugin": "1.48.2",
+        "@eslint-react/eslint-plugin": "1.48.3",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
-        "@microsoft/api-extractor": "7.52.3",
-        "@next/eslint-plugin-next": "15.3.0",
+        "@microsoft/api-extractor": "7.52.4",
+        "@next/eslint-plugin-next": "15.3.1",
         "@swc/core": "1.11.21",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
@@ -199,14 +215,19 @@
         "@vitest/browser": "3.1.1",
         "chalk": "5.4.1",
         "classnames": "2.5.1",
+        "compression": "1.8.0",
         "consola": "3.4.2",
+        "cors": "2.8.5",
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
         "dotenv-cli": "8.0.0",
-        "eslint-config-next": "15.3.0",
+        "eslint-config-next": "15.3.1",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.19",
+        "express": "5.1.0",
+        "express-device": "0.4.2",
+        "express-session": "1.18.1",
         "globals": "16.0.0",
         "graphql": "16.10.0",
         "graphql-ws": "6.0.4",
@@ -222,7 +243,7 @@
         "node-fetch": "3.3.2",
         "node-persist": "4.0.4",
         "ora": "8.2.0",
-        "playwright": "1.51.1",
+        "playwright": "1.52.0",
         "postcss-modules": "6.0.1",
         "qs": "6.14.0",
         "react": "19.1.0",
@@ -237,9 +258,10 @@
         "typescript": "5.8.3",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
-        "vite": "6.3.0",
+        "vite": "6.3.2",
         "vitest": "3.1.1",
         "vitest-browser-react": "0.1.1",
+        "ws": "8.18.1",
         "yargs": "17.7.2"
     },
     "publishConfig": {
@@ -249,13 +271,18 @@
     "devDependencies": {
         "@commitlint/cli": "19.8.0",
         "@eslint/config-inspector": "1.0.2",
+        "@types/compression": "1.7.5",
+        "@types/cors": "2.8.17",
         "@types/crypto-js": "4.2.2",
+        "@types/express": "5.0.1",
+        "@types/express-session": "1.18.1",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/node-persist": "3.1.8",
         "@types/react": "19.1.2",
         "@types/react-dom": "19.1.2",
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
+        "@types/ws": "8.18.1",
         "@types/yargs": "17.0.33",
         "eslint": "9.24.0",
         "lint-staged": "15.5.1",
