--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.9.0",
-        "@vitest/browser": "3.1.1",
+        "@vitest/browser": "3.1.2",
         "chalk": "5.4.1",
         "classnames": "2.5.1",
         "compression": "1.8.0",
@@ -230,10 +230,11 @@
         "express": "4.21.2",
         "express-device": "0.4.2",
         "express-session": "1.18.1",
+        "fs-extra": "11.3.0",
         "globals": "16.0.0",
         "graphql": "16.10.0",
         "graphql-ws": "6.0.4",
-        "i18next": "25.0.0",
+        "i18next": "25.0.1",
         "jsdom": "26.1.0",
         "localforage": "1.10.0",
         "migrate-mongo": "12.1.3",
@@ -256,13 +257,14 @@
         "react-icons": "5.5.0",
         "sass": "1.86.3",
         "slugify": "1.6.6",
+        "ts-node": "10.9.2",
         "tsup": "8.4.0",
         "tsx": "4.19.3",
         "typescript": "5.8.3",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vite": "6.3.2",
-        "vitest": "3.1.1",
+        "vitest": "3.1.2",
         "vitest-browser-react": "0.1.1",
         "ws": "8.18.1",
         "yargs": "17.7.2"
@@ -279,6 +281,7 @@
         "@types/crypto-js": "4.2.2",
         "@types/express": "4.17.21",
         "@types/express-session": "1.18.1",
+        "@types/fs-extra": "11.0.4",
         "@types/migrate-mongo": "10.0.5",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/node-persist": "3.1.8",
