--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
         },
         "noEmit": true
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
