feat: add node_modules to tsconfig exclude

--- a/public/tsconfig.base.json
+++ b/public/tsconfig.base.json
@@ -33,5 +33,6 @@
         "verbatimModuleSyntax": true,
         "noUncheckedSideEffectImports": true,
         "skipLibCheck": true
-    }
+    },
+    "exclude": ["node_modules"]
 }
