--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
         "@microsoft/api-extractor": "7.52.5",
+        "@nestjs/common": "11.1.0",
         "@next/eslint-plugin-next": "15.3.1",
         "@swc/core": "1.11.22",
         "@testing-library/jest-dom": "6.6.3",
