--- a/package.json
+++ b/package.json
@@ -208,16 +208,19 @@
         "@graphql-codegen/client-preset": "4.8.0",
         "@microsoft/api-extractor": "7.52.5",
         "@nestjs/common": "11.1.0",
+        "@nestjs/core": "11.1.0",
         "@next/eslint-plugin-next": "15.3.1",
         "@swc/core": "1.11.22",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.9.0",
         "@vitest/browser": "3.1.2",
+        "body-parser": "2.2.0",
         "chalk": "5.4.1",
         "classnames": "2.5.1",
         "compression": "1.8.0",
         "consola": "3.4.2",
+        "cookie-parser": "1.4.7",
         "cors": "2.8.5",
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
@@ -277,6 +280,7 @@
         "@commitlint/cli": "19.8.0",
         "@eslint/config-inspector": "1.0.2",
         "@types/compression": "1.7.5",
+        "@types/cookie-parser": "1.4.8",
         "@types/cors": "2.8.17",
         "@types/crypto-js": "4.2.2",
         "@types/express": "4.17.21",
