feat: replace dotenv with dotenvx

--- a/package.json
+++ b/package.json
@@ -186,22 +186,23 @@
     ],
     "scripts": {
         "build": "tsup",
-        "dev": "dotenv -e .env -- tsup --watch",
-        "lint": "dotenv -e .env -- tsx src/nodejs/cli/index.ts lint",
-        "lint:fix": "dotenv -e .env -- tsx src/nodejs/cli/index.ts lint:fix",
-        "lint:inspect": "dotenv -e .env -- tsx src/nodejs/cli/index.ts lint:inspect",
-        "reset": "dotenv -e .env -- tsx src/nodejs/cli/index.ts reset",
-        "setup": "dotenv -e .env -- tsx src/nodejs/cli/index.ts setup",
-        "inspect": "dotenv -e .env -- tsx src/nodejs/cli/index.ts inspect",
-        "test:unit": "dotenv -e .env -- tsx src/nodejs/cli/index.ts test:unit",
-        "test:e2e": "dotenv -e .env -- tsx src/nodejs/cli/index.ts test:e2e",
-        "commitlint": "dotenv -e .env -- tsx src/nodejs/cli/index.ts commitlint",
-        "lint-staged": "dotenv -e .env -- tsx src/nodejs/cli/index.ts lint-staged"
+        "dev": "dotenvx run -- tsup --watch",
+        "lint": "dotenvx run -- tsx src/nodejs/cli/index.ts lint",
+        "lint:fix": "dotenvx run -- tsx src/nodejs/cli/index.ts lint:fix",
+        "lint:inspect": "dotenvx run -- tsx src/nodejs/cli/index.ts lint:inspect",
+        "reset": "dotenvx run -- tsx src/nodejs/cli/index.ts reset",
+        "setup": "dotenvx run -- tsx src/nodejs/cli/index.ts setup",
+        "inspect": "dotenvx run -- tsx src/nodejs/cli/index.ts inspect",
+        "test:unit": "dotenvx run -- tsx src/nodejs/cli/index.ts test:unit",
+        "test:e2e": "dotenvx run -- tsx src/nodejs/cli/index.ts test:e2e",
+        "commitlint": "dotenvx run -- tsx src/nodejs/cli/index.ts commitlint",
+        "lint-staged": "dotenvx run -- tsx src/nodejs/cli/index.ts lint-staged"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.12.0",
         "@apollo/client": "3.13.8",
         "@apollo/server": "4.12.0",
+        "@dotenvx/dotenvx": "1.41.0",
         "@eddeee888/gcg-typescript-resolver-files": "0.12.0",
         "@eslint-react/eslint-plugin": "1.48.5",
         "@graphql-codegen/cli": "5.0.5",
@@ -224,7 +225,6 @@
         "cors": "2.8.5",
         "crypto-js": "4.2.0",
         "date-fns": "4.1.0",
-        "dotenv": "16.5.0",
         "dotenv-cli": "8.0.0",
         "envalid": "8.0.0",
         "eslint-config-next": "15.3.1",
@@ -250,7 +250,6 @@
         "next-intl": "4.1.0",
         "node-fetch": "3.3.2",
         "node-persist": "4.0.4",
-        "ora": "8.2.0",
         "playwright": "1.52.0",
         "postcss-modules": "6.0.1",
         "qs": "6.14.0",
