feat: add loadEnvFile

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DEBUG=true
-CYBERSKILL_STORAGE_DIRECTORY=.cyberskill-storage
-NPM_TOKEN=
-GH_TOKEN=
+# optional, default: false
+# DEBUG=false
+
+# optional, default: .cyberskill-storage
+# CYBERSKILL_STORAGE_DIRECTORY=.cyberskill-storage
