--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/dist
-          key: ${{ runner.os }}-dist-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-dist-${{ hashFiles('dist/**') }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-dist-
 
