--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
       - name: 🔧 Setup Environment and Dependencies
         uses: cyberskill-world/.github/actions/env-deps@main
 
-      - name: Configure npm authentication
+      - name: 🔑 Configure npm authentication
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
 
-      - name: Install semantic-release globally with pnpm
+      - name: 🔗 Install semantic-release globally with pnpm
         run: |
           pnpm install --global semantic-release@24.2.3 \
             @semantic-release/changelog@6.0.2 \
@@ -35,7 +35,7 @@ jobs:
             @semantic-release/release-notes-generator@14.0.3 \
             conventional-changelog-conventionalcommits@latest
 
-      - name: Release
+      - name: 🚀 Deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
