feat: change express-device to express-useragent

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: CI - Check
+name: 🧪 CI - Check
 
 on:
   pull_request:
@@ -15,15 +15,12 @@ on:
 
 jobs:
   check:
-    name: 🧪 Check
     runs-on: ubuntu-latest
 
     steps:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Environment and Dependencies
-        uses: cyberskill-world/.github/actions/env-deps@main
+      - uses: cyberskill-world/.github/actions/env-deps@main
 
-      - name: 🛠️ Lint & Build
-        uses: cyberskill-world/.github/actions/lint-build@main
+      - uses: cyberskill-world/.github/actions/lint-build@main
