--- a/package.json
+++ b/package.json
@@ -236,19 +236,19 @@
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.20",
         "express": "4.21.2",
-        "express-device": "0.4.2",
         "express-session": "1.18.1",
+        "express-useragent": "1.0.15",
         "fs-extra": "11.3.0",
         "globals": "16.0.0",
         "graphql": "16.11.0",
         "graphql-ws": "6.0.4",
-        "i18next": "25.0.1",
+        "i18next": "25.0.2",
         "jsdom": "26.1.0",
         "localforage": "1.10.0",
         "migrate-mongo": "12.1.3",
         "modern-normalize": "3.0.1",
         "mongodb": "6.16.0",
-        "mongoose": "8.14.0",
+        "mongoose": "8.14.1",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
         "next-intl": "4.1.0",
@@ -265,7 +265,7 @@
         "sass": "1.87.0",
         "slugify": "1.6.6",
         "tsup": "8.4.0",
-        "tsx": "4.19.3",
+        "tsx": "4.19.4",
         "typescript": "5.8.3",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
@@ -282,15 +282,18 @@
     "devDependencies": {
         "@commitlint/cli": "19.8.0",
         "@eslint/config-inspector": "1.0.2",
+        "@types/body-parser": "1.19.5",
         "@types/compression": "1.7.5",
         "@types/cookie-parser": "1.4.8",
         "@types/cors": "2.8.17",
         "@types/crypto-js": "4.2.2",
         "@types/express": "4.17.21",
         "@types/express-session": "1.18.1",
+        "@types/express-useragent": "1.0.5",
         "@types/fs-extra": "11.0.4",
         "@types/migrate-mongo": "10.0.5",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
+        "@types/node": "22.15.3",
         "@types/node-persist": "3.1.8",
         "@types/react": "19.1.2",
         "@types/react-dom": "19.1.2",
