--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     if: >
       github.event.workflow_run.head_branch == 'main' &&
-      !contains(github.event.workflow_run.head_commit.message, '[skip CI]') &&
+      !contains(github.event.workflow_run.head_commit.message, '[🚀 CI - Deploy]') &&
       github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
