--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
         "@antfu/eslint-config": "4.12.0",
         "@apollo/client": "3.13.8",
         "@apollo/server": "4.12.0",
+        "@cyberskill/shared": "1.129.0",
         "@dotenvx/dotenvx": "1.42.0",
         "@eddeee888/gcg-typescript-resolver-files": "0.12.0",
         "@eslint-react/eslint-plugin": "1.48.5",
