feat: use workflow template for check

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,14 +15,4 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: 📥 Checkout repository
-        uses: actions/checkout@v4
-
-      - name: 🔧 Setup Environment and Dependencies
-        uses: cyberskill-world/.github/actions/env-deps@main
-
-      - name: 🛠️ Lint & Build
-        uses: cyberskill-world/.github/actions/lint-build@main
+    uses: cyberskill-world/.github/.github/workflows/check.yml@main
