feat: test trigger_update

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,18 +1,16 @@
 name: 🧪 CI - Check
-
 on:
-  pull_request:
-    branches:
-      - develop
-      - staging
-      - main
-  push:
-    branches:
-      - develop
-      - staging
-      - main
+  # pull_request:
+  #   branches:
+  #     - develop
+  #     - staging
+  #     - main
+  # push:
+  #   branches:
+  #     - develop
+  #     - staging
+  #     - main
   workflow_dispatch:
-
 jobs:
   check:
     uses: cyberskill-world/.github/.github/workflows/check.yml@main
