--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,10 @@
 name: 🚀 CI - Deploy
-
 on:
-  workflow_run:
-    workflows: ["🧪 CI - Check"]
-    types:
-      - completed
-
+  workflow_dispatch:
+  # workflow_run:
+  #   workflows: ["🧪 CI - Check"]
+  #   types:
+  #     - completed
 jobs:
   deploy:
     if: >
