--- a/.github/workflows/check-then.yml
+++ b/.github/workflows/check-then.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
 jobs:
   deploy:
-    if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'main'
+    # if: >
+    #   github.event.workflow_run.conclusion == 'success' &&
+    #   github.event.workflow_run.head_branch == 'main'
     runs-on: ubuntu-latest
 
     steps:
