--- a/.github/workflows/check-then.yml
+++ b/.github/workflows/check-then.yml
@@ -6,7 +6,7 @@ on:
   #     - completed
   workflow_dispatch:
 jobs:
-  deploy:
+  deploy-then:
     # if: >
     #   github.event.workflow_run.conclusion == 'success' &&
     #   github.event.workflow_run.head_branch == 'main'
@@ -16,5 +16,6 @@ jobs:
       - name: Trigger another repository's workflow
         uses: cyberskill-world/.github/actions/trigger-events@main
         with:
-          repo: "cyberskill-world/template-be-nodejs"
-          events: "📈 CI - Update"
+          REPO: "cyberskill-world/template-be-nodejs"
+          EVENTS: "📈 CI - Update"
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
