--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
 name: 🚀 CI - Deploy
 on:
-  workflow_dispatch:
-  # workflow_run:
-  #   workflows: ["🧪 CI - Check"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["🧪 CI - Check"]
+    types:
+      - completed
 jobs:
   deploy:
     if: >
