--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -10,3 +10,4 @@ jobs:
       github.event.workflow_run.conclusion == 'success' &&
       github.event.workflow_run.head_branch == 'main'
     uses: cyberskill-world/.github/.github/workflows/distribute.yml@main
+    secrets: inherit
