feat: turn exactOptionalPropertyTypes off, add uniqueArray util

--- a/public/tsconfig.base.json
+++ b/public/tsconfig.base.json
@@ -16,7 +16,7 @@
         "strictPropertyInitialization": true,
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
-        "exactOptionalPropertyTypes": true,
+        "exactOptionalPropertyTypes": false,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitOverride": true,
