--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,19 @@ jobs:
     steps:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: release
+      - name: 🔁 Merge main into release
+        uses: cyberskill-world/.github/actions/merge-branch@main
+        with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          FROM: main
+          TO: release
       - name: 🔧 Setup Environment and Dependencies
         uses: cyberskill-world/.github/actions/env-deps@main
+      - name: 🚧 Build project
+        run: |
+          pnpm build
       - name: 🔑 Configure npm authentication
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
       - name: 🔗 Install semantic-release globally with pnpm
