--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,10 @@
 name: 🚀 CI - Deploy
 on:
-  workflow_run:
-    workflows: ["🧪 CI - Check"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 jobs:
   deploy:
-    if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'main'
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
