--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   distribute:
     if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'main'
+      github.event.workflow_run.conclusion == 'success'
     uses: cyberskill-world/.github/.github/workflows/distribute.yml@main
     secrets: inherit
