--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,10 @@
 name: 🚀 CI - Deploy
 on:
-  workflow_run:
-    workflows: ["🧪 CI - Check"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 jobs:
   deploy:
-    if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'main'
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
@@ -35,3 +31,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: semantic-release
+      - name: 🔁 Sync changes to develop
+        uses: cyberskill-world/.github/actions/merge-branch@main
+        with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          FROM: main
+          TO: develop
